--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.4",
     "lucide-react": "^0.406.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
